--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ imageio
 mujoco>=2.3.3 #.venv/lib/python3.8/site-packages/gymnasium/envs/mujoco/mujoco_rendering.py L:593 ..self.data.solver_iter --> self.data.solver_niter
 gymnasium==1.0.0
 cma
+imageio[ffmpeg]
 
 # Visualisation tools
 matplotlib
